Fixed sizing of collapsed sections in city profile. #5

--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,7 @@ figure {
 
 /* USER CITY PROFILE */
 .visit-date {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 600;
 }
 
@@ -297,7 +297,6 @@ figure {
   text-decoration: none;
   border: 1px solid #001d6e;
   min-width: 240px;
-  width: 85%;
   margin: 2% 10% 0;
   border-radius: 0.375rem;
 }
@@ -313,6 +312,7 @@ figure {
   width: 85%;
   border: 1px solid #001d6e;
   border-top: none;
+  padding: 0;
 }
 
 .fa-chevron-left,
